<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">陈智康_News</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="Search">搜索</string>
    <string name="Marked">收藏</string>
    
    <string name="Recommended">推荐</string>
    <string name="News">新闻</string>
    <string name="NewsYl">娱乐</string>
    <string name="NewsCj">财经</string>
    <string name="NewsZq">证券</string>
    <string name="NewsTy">体育</string>
    <string name="NewsKj">科技</string>
    <string name="NewsYx">游戏</string>
    <string name="NewsJy">教育</string>
    <string name="NewsDm">动漫</string>
    
    <string name="loading">正在加载</string>
    <string name="Returner">返回首页</string>
    <string name="Marker">设为收藏</string>
    <string name="DMarker">取消收藏</string>
    <string name="Edit">编辑</string>

</resources>
