<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" 
            android:inputType="text"
            android:labelFor="@+id/Search">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/SearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSearchButtonClick"
            android:text="@string/Search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/MarkedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Marked" 
            style="?android:attr/buttonBarButtonStyle"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
                
                <Button
                    android:id="@+id/RecommendedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Recommended" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/NewsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/News" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/NewsYlButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNewsButtonClick"
                    android:text="@string/NewsYl" />

                <Button
                    android:id="@+id/NewsCjButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewsCj" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/NewsTyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewsTy" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/NewsKjButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewsKj" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/NewsYxButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewsYx" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/NewsJyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewsJy" 
                    android:onClick="onNewsButtonClick"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    
   	<com.clazy.example.myapplication.MyListView 
   	    android:id="@+id/NewsList" 
   	    android:layout_width="match_parent" 
   	    android:layout_height="wrap_content">
   	    
   	</com.clazy.example.myapplication.MyListView>

</LinearLayout>